fix configuration sys